// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ingress/LinkStringFormat Empty 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
    style="display: flex; margin-bottom: 5px;"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-srrjpp-MuiTypography-root-MuiLink-root"
      href="http://exampleurl.com/"
      style="margin-right: 5px;"
    >
      /
    </a>
    (Prefix)
  </div>
</div>
`;

exports[`Storyshots ingress/LinkStringFormat More Path 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
    style="display: flex; margin-bottom: 5px;"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-srrjpp-MuiTypography-root-MuiLink-root"
      href="http://exampleurl.com/pathB"
      style="margin-right: 5px;"
    >
      /pathB
    </a>
    (Prefix)
  </div>
</div>
`;

exports[`Storyshots ingress/LinkStringFormat Solo Path 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
    style="display: flex; margin-bottom: 5px;"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-srrjpp-MuiTypography-root-MuiLink-root"
      href="http://exampleurl.com/pathA"
      style="margin-right: 5px;"
    >
      /pathA
    </a>
    (Prefix)
  </div>
</div>
`;
